Fix card jumps when switching between forms

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -11,11 +11,14 @@ html {
 body {
     font-size: 1rem;
     font-family: "Roboto", sans-serif;
-    width: 100%;
-    max-width: 700px;
-    margin: 2rem auto;
+    width: 100vw;
     color: rgb(31, 31, 31);
     background-color: rgb(240, 240, 240);
+}
+
+.App {
+    max-width: 700px;
+    margin: 2rem auto;
 }
 
 .MuiPaper-root {
